--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 
 html,
 body {
+  /* overflow-x: hidden; */
   scroll-behavior: smooth;
   height: 100%;
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
@@ -140,14 +141,6 @@ main {
   font-style: normal;
   font-weight: normal;
   src: local("Overseer Regular"), url("font/Overseer.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Overseer Italic";
-  font-style: normal;
-  font-weight: normal;
-  src: local("Overseer Regular"),
-    url("font/Overseer Italic.woff") format("woff");
 }
 
 /* inter-regular - latin */
@@ -922,4 +915,120 @@ select:-webkit-autofill {
 }
 ::-webkit-scrollbar-thumb {
   background: #fecf4d;
+}
+
+/* CAROSELLO  */
+
+#gallery-carousel {
+  background-color: var(--color-text-dark);
+  overflow: hidden;
+  border-top: 3px solid var(--color-text-dark);
+  border-bottom: 3px solid var(--color-text-dark);
+  margin-top: 3rem;
+}
+
+.carousel-row {
+  display: flex;
+  width: max-content;
+  animation: scroll-left 40s linear infinite;
+}
+
+.carousel-row.reverse {
+  animation: scroll-right 40s linear infinite;
+}
+
+.carousel-row:hover {
+  animation-play-state: paused;
+}
+
+.carousel-row img {
+  height: 400px;
+  width: auto;
+  object-fit: cover;
+  border-right: 3px solid var(--color-text-dark);
+  flex-shrink: 0;
+}
+
+#carousel-row-1 {
+  border-bottom: 3px solid var(--color-text-dark);
+}
+
+/* Animazioni */
+@keyframes scroll-left {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes scroll-right {
+  0% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+/* --- CAROSELLO IMAGE OVERLAY & HOVER --- */
+.carousel-row img {
+  height: 400px;
+  width: auto;
+  object-fit: cover;
+  border-right: 3px solid var(--color-text-dark);
+  flex-shrink: 0;
+  opacity: 0.5;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.carousel-row img:hover {
+  opacity: 1;
+  z-index: 2;
+}
+
+/* --- MODAL IMAGE --- */
+.image-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.85);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  z-index: 9999;
+}
+
+.image-modal.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.modal-content {
+  position: relative;
+  max-width: 90vw;
+  max-height: 90vh;
+}
+
+.modal-content img {
+  width: 50vh;
+  height: auto;
+  border: 3px solid white;
+}
+
+.close-modal {
+  position: absolute;
+  top: 0px;
+  right: 20px;
+  font-size: 3rem;
+  color: white;
+  cursor: pointer;
+  background: none;
 }
