--- a/style.css
+++ b/style.css
@@ -858,18 +858,33 @@ input[type="number"]::-webkit-outer-spin-button {
   background-color: var(--color-bg-dark);
 }
 
+
 #footer h6 {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  bottom: 5%;
+  left: 60%;
   font-size: 1rem;
   color: var(--color-bg-light);
   z-index: 9;
-  transform: translate(-50%, -50%);
+  transform: translate(-60%, 0%);
 }
 
 #footer h6 a {
   text-decoration: underline;
+}
+
+#footer p {
+  position: absolute;
+  bottom: 5%;
+  left: 35%;
+  font-size: 1rem;
+  color: var(--color-bg-light);
+  z-index: 9;
+  transform: translate(-35%, 0%);
+}
+
+#footer p:hover {
+  color: var(--color-giallo-cbc);
 }
 
 #footer h6 a:hover {
