--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ input,
 select,
 textarea {
   font: inherit;
+  color: var(--color-text-dark) !important;
 }
 
 a {
@@ -1163,20 +1164,7 @@ select:-webkit-autofill {
   }
   .cbc-form input,
   .cbc-form textarea {
-    font-weight: bold;
-    padding: 1rem;
-    padding-top: 1.4rem;
-    font-size: 1rem;
-    border: 3px solid var(--color-text-dark);
-    background: transparent;
-    transition: all 0.3s ease;
-    outline: none;
-    resize: none;
-  }
-  input[type="number"]::-webkit-inner-spin-button,
-  input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+    border-radius: 0px !important;
   }
   /* FLOATING LABEL EFFECT */
   .cbc-form input:focus + label,
